--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dream_Cars</title>
-    <style>.buttun :hover{ border: 1px;}</style>
+    <style>
+        .buttun :hover {
+            border: 1px;
+        }
+    </style>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="news">
+
+
 </head>
 
 <body>
@@ -19,7 +24,7 @@
             </header>
             <nav>
                 <ul class="cars">
-                    <li><a href="">News</a></li>
+                    <li><a href="news.html">News</a></li>
                     <li><a href="#Home">Home</a></li>
                     <li><a href="">Page</a></li>
                     <li><a href="#Us">support</a></li>
@@ -31,7 +36,7 @@
     <main>
         <section>
             <div class="align">
-               
+
                 <video class="bmw_frame" src="black_bmw.mp4" autoplay=1 muted>Our
                     page</video>
 
@@ -52,7 +57,7 @@
             <label for="name">
 
                 <h2 id="Us"><strong class="Support">Support</strong></h2>
-            
+
                 <input type="name" placeholder="Full_Name" id="Full_Name">
                 <br>
                 <br>
