addet new shadow

--- a/news.html
+++ b/news.html
@@ -13,8 +13,9 @@
 <body>
     <header>
         <h1>the last news about BMW</h1>
-        <a href="news.html">news</a>
+        <a class="back" href="index.html">←Back</a>
     </header>
+
     <main>
 
         <div>
@@ -23,7 +24,7 @@
                 <img src="bmw m5 2.jpg" alt="" width="400px" height="auto">
             </figure>
 
-            <figcaption>
+            <figcaption class="news-text">
                 The Icon of the Past, BMW Classic, Returns to the Spotlight
 
                 BMW has unveiled a new program to revive its classic cars, announcing that it will begin restoring
@@ -38,7 +39,7 @@
             <figure id="news-item1">
                 <img src="mbw m5.jpg" alt="" width="400px" height="auto">
             </figure>
-            <figcaption>
+            <figcaption class="news-text2">
                 Global Demand for Classic BMW Cars Is Rising
 
                 The BMW Classic division reported a significant increase in demand for classic cars over the past
