add new Back style

--- a/index.html
+++ b/index.html
@@ -21,16 +21,33 @@
             <header>
                 <h1>BMW</h1>
                 <p id="Home" hidden>Home</p>
-                <!--Our nav-->
+
+
                 <nav>
                     <ul class="cars">
                         <li><a href="news.html">News</a></li>
                         <li><a href="#Home">Home</a></li>
-                        <li><a href="https://www.bmw.de/de/index.html?clc=1a1mm01dj1b01br9&tl=sea-yhbn-DE_BMW_NC_BRAND%20PURE_DEU_BND_ALO_BMW%20V2023DE%20LO%20BR%20024_CONV_%20_SEABNG-mix-miy--sech-BRA_BND_BRAND%20PURE_MUL_NONE-.-e-bmw-.-.&clc=sea-yhbn-DE_BMW_NC_BRAND%20PURE_DEU_BND_ALO_BMW%20V2023DE%20LO%20BR%20024_CONV_%20_SEABNG-mix-&gaw=sea:1168782801806653_kwd-73049679238790:loc-72&msclkid=404c8478061612b8fee8ed49af23fd8f&gclid=CMmdyKKgpJEDFZ4DXgEdH_87vQ&gclsrc=ds&gad_source=7&gad_campaignid=16390445917">Page</a></li>
+                        <li><a
+                                href="https://www.bmw.de/de/index.html?clc=1a1mm01dj1b01br9&tl=sea-yhbn-DE_BMW_NC_BRAND%20PURE_DEU_BND_ALO_BMW%20V2023DE%20LO%20BR%20024_CONV_%20_SEABNG-mix-miy--sech-BRA_BND_BRAND%20PURE_MUL_NONE-.-e-bmw-.-.&clc=sea-yhbn-DE_BMW_NC_BRAND%20PURE_DEU_BND_ALO_BMW%20V2023DE%20LO%20BR%20024_CONV_%20_SEABNG-mix-&gaw=sea:1168782801806653_kwd-73049679238790:loc-72&msclkid=404c8478061612b8fee8ed49af23fd8f&gclid=CMmdyKKgpJEDFZ4DXgEdH_87vQ&gclsrc=ds&gad_source=7&gad_campaignid=16390445917">Page</a>
+                        </li>
                         <li><a href="#Us">support</a></li>
 
                     </ul>
                 </nav>
+
+            </header>
+            <nav>
+
+                <ul class="cars">
+                    <li><a href="news.html">News</a></li>
+                    <li><a href="#Home">Home</a></li>
+                    <li><a href="">Page</a></li>
+                    <li><a href="#Us">support</a></li>
+
+                </ul>
+        </div>
+        </nav>
+
         </div>
     </header>
     <main>
